--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,6 @@
     font: inherit;
 }
 
-input,
-select,
-button{
-    outline: none;
-    height: 100%;
-}
-
 fieldset{
     border: none;
 }
@@ -35,79 +28,115 @@ body{
     font-family: 'Inter', sans-serif;
     font-size: 1rem;
     font-weight: 500;
+    line-height: 1;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--clr-dark-1);
+    text-align: center;
+    background-color: var(--clr-dark-2);
 }
 
 main{
     width: 30rem;
-    
+    max-width: 95%;
+    margin: 0 auto;
     background-color: var(--clr-white);
-    
+    color: var(--clr-dark-1);
+    cursor: pointer;
 }
 
 form{
     width: 100%;
-    height: 4rem;
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    align-items: center;
+    column-gap: 1rem;
+    padding: 0.5rem;
 }
 
 fieldset:nth-of-type(2){
     width: 55%;
 }
 
-input{
-    width: 3rem;
-    height: 100%;
-}
-
 select,
 button,
-option{
+option,
+button{
+    background-color: inherit;
     border: 1px solid var(--clr-light-2);
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 6px;
-    padding-inline: 8px;
+    outline: none;
+    cursor: pointer;
+}
+
+input{
+    width: 3rem;
+    height: 2.3rem
 }
 
 select{
-    color: var(--clr-dark-1); 
     width: 100%;
+    padding: 0.45rem 0.4rem;
 }
 
 
 option{
-    
     border-radius: 6px;
     margin-block: 2rem;
 }
 
 button{
-    font-size: 0.8rem; 
+    font-size: 0.6rem; 
+    padding: 0.6rem 0.4rem;
 }
 
 .color-container{
     display: flex;
-    text-align: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .color-div{
-   width: 100%;
+   width: 20%;
 }
-
 
 .color-svg{
     flex-basis: 100%;
     width: 100%;
-    height: 15rem;
-
+    height: 25rem;
 }
 
 .color-hex{
     margin: 1rem auto;
+    font-size: 0.8rem;
+    transition: 1s ease-in-out;
+}
+
+.copy-notice{
+    padding: 1rem;
+    background-color: var(--clr-dark-1);
+    color: var(--clr-light-2);
+}
+
+.copy-notice.active{
+    color: var(--clr-light-1);
+}
+
+.scale{
+    animation: scaleIn 1s ease-in-out;
+}
+
+@keyframes scaleIn {
+    0%{
+        opacity: 0;
+        transform: scale(0.5);
+        transition: 0.5s ease-in-out;
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1);
+        transition: 0.5s ease-in-out;
+    }
 }
